--- a/Projet/boulderdash-g58132/src/main/resources/g58132/atlg3/boulderdash/hello-view.fxml
+++ b/Projet/boulderdash-g58132/src/main/resources/g58132/atlg3/boulderdash/hello-view.fxml
@@ -6,7 +6,7 @@
 
 <?import javafx.scene.control.Button?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.boulderdashg58132.HelloController">
+      fx:controller="g58132.atlg3.boulderdash.HelloController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
